k8s/hello-world-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: hello-world-ingress
  namespace: hello-world
  annotations:
    ingress.kubernetes.io/rewrite-target: /    
spec:  
  rules:    
  - host: kube-master
    http:
      paths:
      - path: /cpu-test
        backend:
          serviceName: hello-app-cpu
          servicePort: 80
      - path: /memory-test
        backend:
          serviceName: hello-app-memory
          servicePort: 80
